syntax = "proto3" ;
package chain ;

option go_package = "/chain" ;

message ProtoHeader {
    // Hash Pointer
    bytes ParentHash = 1 ;
    // Hash of all the transactions in this block
    bytes TxHash = 2 ;
    // Block Height
    uint64 Height = 3 ;
    // Any extra data
    bytes extra = 4 ;
}

message ProtoBlock {
    chain.ProtoHeader Header = 1 ;
    chain.ProtoBody Body = 2 ;
    // Block hash
    bytes BlockHash = 3 ;
}

message ProtoBody {
    repeated bytes Txs = 1 ;
    repeated bytes Responses = 2 ;
}